# hollow-knight-pusher

./: .env  .gitignore  README.md  bot.py  pyproject.toml  start.sh
hkbot/plugins/: push.py  speedrun.py  src.py  translate.py
